# custom_inverter_fw

./: .gitignore  ORGANIZATION.md  README.md  brent_ws.theia-workspace  danial_ws.theia-workspace  setup.sh
main-motor-control/frontend/xbox-controller/: index.html  package-lock.json  package.json  pyproject.toml
main-motor-control/frontend/xbox-controller/dashboard_static/: index.html
main-motor-control/frontend/xbox-controller/dashboard_static/assets/: index-BGWxty6M.css  index-CEVfrElN.js  index-D-2Fh0AI.css  index-DMGB9wR_.css  index-DRAC2BRm.js
main-motor-control/frontend/xbox-controller/src/: App.test.tsx  main.tsx  styles.css
main-motor-control/frontend/xbox-controller/src/components/: MotorControlPanel.test.tsx  MotorControlPanel.tsx  MusicControlPanel.test.tsx  MusicControlPanel.tsx  SessionLauncher.tsx  UartDebugTerminal.tsx  UiChrome.tsx
main-motor-control/frontend/xbox-controller/src/context/: DashboardContext.tsx
main-motor-control/frontend/xbox-controller/src/lib/: api.ts  instances.test.ts  instances.ts  selectors.test.ts  selectors.ts  types.ts
main-motor-control/frontend/xbox-controller/src/pages/: ConfigurePage.tsx  DashboardPage.tsx  LandingPage.tsx  McuPage.tsx
main-motor-control/frontend/xbox-controller/tests/: conftest.py  test_command_limits.py  test_dashboard_api.py  test_dashboard_music_api.py  test_music_runtime.py  test_music_uart.py  test_runtime.py  test_uart.py
main-motor-control/frontend/xbox-controller/xbox_controller/: __init__.py  commands.py  dashboard.py  dashboard_runtime.py  mapping.py  music_runtime.py  music_uart.py  runtime.py  runtime_models.py  uart.py
main-motor-control/main_foc_endat_system/script/xbox-controller/: .gitignore  README.md  app_logging.py  commands.py  controller.py  dashboard.py  main.py  mapping.py  pyproject.toml  runtime.py  runtime_models.py  uart.py  vite.config.ts
main-motor-control/main_foc_endat_system/script/xbox-controller/dashboard_static/: app.js  index.html  styles.css
main-motor-control/main_foc_endat_system/script/xbox-controller/src/: App.test.tsx  App.tsx  styles.css
(+352 files in other folders)
